Add bisect_ppx instrumentation

--- a/lib/dune
+++ b/lib/dune
@@ -1,3 +1,6 @@
 (library
  (name ometrics)
- (libraries unix str merlin.kernel merlin.analysis))
+ (public_name ometrics)
+ (libraries unix str merlin.kernel merlin.analysis)
+ (instrumentation
+  (backend bisect_ppx)))
