--- a/ometrics.opam
+++ b/ometrics.opam
@@ -10,6 +10,7 @@ depends: [
   "result"
   "cmdliner"
   "qcheck-alcotest" {with-test & >= "0.18"}
+  "bisect_ppx" {dev & >= "2.6.0"}
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
