--- a/ometrics.opam
+++ b/ometrics.opam
@@ -7,14 +7,14 @@ synopsis: "OCaml analysis in a merge request changes"
             
 depends: [
   "ocaml" {>= "4.12" & < "4.13"}
-  "yojson"
+  "yojson" {>= "1.7.0"}
   "menhirSdk" {>= "20211012" & < "20211013"}
   "menhirLib" {>= "20211012" & < "20211013"}
   "menhir" {>= "20211012" & < "20211013"}
-  "dot-merlin-reader"
-  "csexp"
-  "result"
-  "cmdliner"
+  "dot-merlin-reader" {>= "4.1"}
+  "csexp" {>= "1.5.1"}
+  "result" {>= "1.5"}
+  "cmdliner" {>= "1.0.4"}
   "qcheck-alcotest" {with-test & >= "0.18"}
   "bisect_ppx" {dev & >= "2.6.0"}
 ]
