--- a/ometrics.opam
+++ b/ometrics.opam
@@ -1,12 +1,15 @@
 opam-version: "2.0"
 version: "0.1.1"
+license: "MIT"
 maintainer: "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
 homepage: "https://gitlab.com/nomadic-labs/ometrics"
+dev-repo: "git+https://gitlab.com/nomadic-labs/ometrics.git"
 bug-reports: "https://gitlab.com/nomadic-labs/ometrics/-/issues"
 synopsis: "OCaml analysis in a merge request changes"
-            
+
 depends: [
   "ocaml" {>= "4.12" & < "4.13"}
+  "dune" {>= "2.9.1"}
   "yojson" {>= "1.7.0"}
   "menhirSdk" {>= "20211012" & < "20211013"}
   "menhirLib" {>= "20211012" & < "20211013"}
