Conflict with menhir

--- a/ometrics.opam
+++ b/ometrics.opam
@@ -11,15 +11,18 @@ depends: [
   "ocaml" {>= "4.12" & < "4.13"}
   "dune" {>= "2.9.1"}
   "yojson" {>= "1.7.0"}
-  "menhirSdk" {>= "20211012" & < "20211013"}
-  "menhirLib" {>= "20211012" & < "20211013"}
-  "menhir" {>= "20211012" & < "20211013"}
+  "menhirSdk"
+  "menhirLib"
+  "menhir"
   "dot-merlin-reader" {>= "4.1"}
   "csexp" {>= "1.5.1"}
   "result" {>= "1.5"}
   "cmdliner" {>= "1.0.4"}
   "qcheck-alcotest" {with-test & >= "0.18"}
   "bisect_ppx" {dev & >= "2.6.0"}
+]
+conflicts: [
+  "menhir"
 ]
 build: [
   ["dune" "build" "-p" name "-j" jobs]
