--- a/ometrics.opam
+++ b/ometrics.opam
@@ -18,6 +18,7 @@ depends: [
   "csexp" {>= "1.5.1"}
   "result" {>= "1.5"}
   "cmdliner" {>= "1.0.4"}
+  "digestif"
   "qcheck-alcotest" {with-test & >= "0.18"}
   "bisect_ppx" {dev & >= "2.6.0"}
 ]
