--- a/ometrics.opam
+++ b/ometrics.opam
@@ -1,5 +1,5 @@
 opam-version: "2.0"
-version: "0.1.1"
+version: "0.1.3"
 license: "MIT"
 maintainer: "Valentin Chaboche <valentin.chaboche@lambda-coins.com>"
 homepage: "https://gitlab.com/nomadic-labs/ometrics"
@@ -8,7 +8,7 @@ bug-reports: "https://gitlab.com/nomadic-labs/ometrics/-/issues"
 synopsis: "OCaml analysis in a merge request changes"
 
 depends: [
-  "ocaml" {>= "4.12" & < "4.13"}
+  "ocaml" {>= "4.12" & < "4.14"}
   "dune" {>= "2.9.1"}
   "yojson" {>= "1.7.0"}
   "menhirSdk"
@@ -17,8 +17,8 @@ depends: [
   "dot-merlin-reader" {>= "4.1"}
   "csexp" {>= "1.5.1"}
   "result" {>= "1.5"}
-  "cmdliner" {<= "1.0.4"}
-  "digestif"
+  "cmdliner" {<= "1.0.0"}
+  "digestif" {>= "0.7.2"}
   "qcheck-alcotest" {with-test & >= "0.18"}
   "bisect_ppx" {dev & >= "2.6.0"}
 ]
