--- a/ometrics.opam
+++ b/ometrics.opam
@@ -8,7 +8,7 @@ bug-reports: "https://gitlab.com/nomadic-labs/ometrics/-/issues"
 synopsis: "OCaml analysis in a merge request changes"
 
 depends: [
-  "ocaml" {>= "4.12" & < "4.14"}
+  "ocaml" {>= "4.12.0"}
   "dune" {>= "2.9.1"}
   "yojson" {>= "1.7.0"}
   "menhirSdk"
