--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ include: 'https://gitlab.com/nomadic-labs/gitlab-ocaml-ci-example/-/raw/main/.gi
     matrix:
     - OCAML_COMPILER: "4.12.1"
     - OCAML_COMPILER: "4.13.1"
+    - OCAML_COMPILER: "4.14.0"
 
 build:
   stage: build
