--- a/lib/dune
+++ b/lib/dune
@@ -1,5 +1,5 @@
 (library
  (name ometrics)
- (libraries unix str merlin.kernel merlin.analysis digestif)
+ (libraries unix str digestif ppxlib)
  (instrumentation
   (backend bisect_ppx)))
