--- a/ometrics.opam
+++ b/ometrics.opam
@@ -10,17 +10,13 @@ synopsis: "OCaml analysis in a merge request changes"
 depends: [
   "ocaml" {>= "4.12.0"}
   "dune" {>= "2.9.1"}
-  "yojson" {>= "1.7.0"}
-  "csexp" {>= "1.5.1"}
-  "result" {>= "1.5"}
+  "ppxlib" {>= "0.24.0"}
   "cmdliner" {>= "1.0.0"}
   "digestif" {>= "0.7.2"}
   "qcheck-alcotest" {with-test & >= "0.18"}
   "bisect_ppx" {dev & >= "2.6.0"}
 ]
-conflicts: [
-  "menhir" {!= "20211012"}
-]
+
 build: [
   ["dune" "build" "-p" name "-j" jobs]
 ]
