--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,9 +4,41 @@ include: 'https://gitlab.com/nomadic-labs/gitlab-ocaml-ci-example/-/raw/main/.gi
   parallel:
     matrix:
     - OCAML_COMPILER: "4.12.1"
+      PPXLIB_VERSION:
+        - "ppxlib.0.20.0"
+        - "ppxlib.0.21.0"
+        - "ppxlib.0.21.1"
+        - "ppxlib.0.22.0"
+        - "ppxlib.0.22.1"
+        - "ppxlib.0.22.2"
+        - "ppxlib.0.23.0"
+        - "ppxlib.0.24.0"
+        - "ppxlib.0.25.0"
+        - "ppxlib.0.26.0"
     - OCAML_COMPILER: "4.13.1"
+      PPXLIB_VERSION:
+        - "ppxlib.0.20.0"
+        - "ppxlib.0.21.0"
+        - "ppxlib.0.21.1"
+        - "ppxlib.0.22.0"
+        - "ppxlib.0.22.1"
+        - "ppxlib.0.22.2"
+        - "ppxlib.0.23.0"
+        - "ppxlib.0.24.0"
+        - "ppxlib.0.25.0"
+        - "ppxlib.0.26.0"
     - OCAML_COMPILER: "4.14.0"
-
+      PPXLIB_VERSION:
+        - "ppxlib.0.20.0"
+        - "ppxlib.0.21.0"
+        - "ppxlib.0.21.1"
+        - "ppxlib.0.22.0"
+        - "ppxlib.0.22.1"
+        - "ppxlib.0.22.2"
+        - "ppxlib.0.23.0"
+        - "ppxlib.0.24.0"
+        - "ppxlib.0.25.0"
+        - "ppxlib.0.26.0"
 build:
   stage: build
   extends: .build-matrix
@@ -27,6 +59,7 @@ build:
     - opam install . --dry-run --deps-only --locked --with-test --with-doc --yes | awk '/-> installed/{print $3}' | xargs opam depext -iy
     # This is dirty but I want to keep the same .opam that is published on opam-repo
     - opam install cmdliner.1.0.4 --yes
+    - opam install $PPXLIB_VERSION --yes
     - eval $(opam env)
     - make build
 
